# parquet_decoding

./: Cargo.toml  README.MD  parquet_metadata_benchmark.csv
parquet_decoding_benchmark_plot/: README.MD  plot.py  requirements.txt
parquet_decoding_benchmark_plot/parquet_decoding_venv/: pyvenv.cfg
parquet_decoding_benchmark_plotting/: .python-version  README.MD  detailed_comparision.md  main.py  requirements.txt
parquet_decoding_benchmark_processing/: Cargo.toml  README.MD
parquet_decoding_benchmark_processing/src/: main.rs
parquet_decoding_benchmark_processing/src/result/: parquet_metadata_benchmark.csv
src/: main.rs
